css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.7;
  color: #303030;
  background-color: #252525;
}

.header {
  height: 100vh;
  background-image: linear-gradient(
      to right bottom,
      rgba(0, 0, 0, 0.8),
      rgba(30, 30, 30, 0.8)
    ),
    url('../img/mountains2.jpg');
  background-size: cover;
  background-position: center;
  position: relative;
}

.logo-box {
  position: absolute;
  top: 40px;
  left: 40px;
}

.logo {
  height: 60px;
}

.text-box {
  position: absolute;
  top: 45%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

.heading-primary {
  color: white;
  text-transform: uppercase;
  text-shadow: 2px 4px 4px rgba(25, 25, 25, 0.5);
  backface-visibility: hidden;
  margin-bottom: 60px;
}

.heading-primary-main {
  display: block;
  font-size: 60px;
  font-weight: 400;
  letter-spacing: 35px;
  margin: 100px 0 20px 0;

  animation: moveInRight 1s ease-out;
}

.heading-primary-sub {
  display: block;
  font-size: 20px;
  font-weight: 300;
  letter-spacing: 17.4px;
  animation: moveInLeft 1s ease-out;
}

@keyframes moveInLeft {
  0% {
    opacity: 0;
    transform: translateX(-100px);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes moveInRight {
  0% {
    opacity: 0;
    transform: translateX(100px);
  }

  100% {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes moveInBottom {
  0% {
    opacity: 0;
    transform: translateY(30px);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.btn:link,
.btn:visited {
  text-transform: uppercase;
  text-decoration: none;
  padding: 15px 40px;
  display: inline-block;
  border-radius: 100px;
  transition: all 0.2s;
  position: relative;
}

.btn:hover {
  transform: translateY(-3px);
  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
}

.btn:active {
  transform: translateY(-1px);
  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
}

.btn-white {
  background-color: white;
  color: rgba(60, 60, 60);
}

.btn::after {
  content: '';
  display: inline-block;
  height: 100%;
  width: 100%;
  border-radius: 100px;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  transition: all 0.4s;
}

.btn-white::after {
  background-color: white;
}

.btn:hover::after {
  transform: scaleX(1.4) scaleY(1.6);
  opacity: 0;
}

.btn-animated {
  animation: moveInBottom 0.5s ease-out;
  animation-delay: 0.75s;
  animation-fill-mode: backwards;
}

#github-logo {
  font-size: 75px;
}

@media (max-width: 768px) {
  .logo-box {
    top: 30px;
    left: 30px;
  }

  .logo {
    height: 40px;
  }

  .heading-primary-main {
    font-size: 50px;
    font-weight: 400;
    letter-spacing: 25px;
  }

  .heading-primary-sub {
    font-size: 20px;
    font-weight: 300;
    letter-spacing: 5px;
  }

  .btn:link,
  .btn:visited {
    padding: 15px 30px;
  }

  #github-logo {
    font-size: 50px;
  }
}

@media (max-width: 600px) {
  .logo-box {
    top: 20px;
    left: 20px;
  }

  .logo {
    height: 30px;
  }

  .heading-primary-main {
    font-size: 30px;
    letter-spacing: 20px;
  }

  .heading-primary-sub {
    font-size: 12px;
    letter-spacing: 5px;
  }

  .btn:link,
  .btn:visited {
    padding: 7.5px 20px;
  }

  #github-logo {
    font-size: 50px;
  }
}

@media (max-width: 320px) {
  .heading-primary-main {
    font-size: 25px;
  }
}

